--- a/index.html
+++ b/index.html
@@ -40,16 +40,22 @@
                 <label for="height">Height:</label>
                 <input type="number" id="height" name="height" value="210" min="25">
                 <label for="fontSize">Font Size:</label>
-                <input type="number" id="fontSize" name="fontSize" value="9" min="1">
+                <input type="number" id="fontSize" name="fontSize" value="5" min="1">
+                <label for="pagePadding">Margins:</label>
+                <input type="number" id="pagePadding" name="pagePadding" value="10" min="0">
                 <label for="lines">Lines:</label>
                 <!-- <input type="number" id="lines" name="lines" value="32" min="1"> -->
                 <input type="number" id="lines" name="lines" value="82" min="1">
+                <label for="charsPerLine">Chars:</label>
+                <input type="number" id="charsPerLine" name="charsPerLine" value="50" min="1">
                 <label for="ordFront">Page Order front:</label>
-                <input type="text" id="ordFront" name="pages" value="-1,1,-3,3">
+                <!-- <input type="text" id="ordFront" name="pages" value="-1,1,-3,3"> -->
                 <!-- <input type="text" id="ordFront" name="pages" value="1,2,3,4,5,6"> -->
+                <input type="text" id="ordFront" name="pages" value="1,2,3,4">
                 <label for="ordBack">Page Order back:</label>
-                <input type="text" id="ordBack" name="pages" value="-2,2,-4,4">
+                <!-- <input type="text" id="ordBack" name="pages" value="-2,2,-4,4"> -->
                 <!-- <input type="text" id="ordBack" name="pages" value="7,8,9,10,11,12"> -->
+                <input type="text" id="ordBack" name="pages" value="5,6,7,8">
                 <input type="button" value="Refresh" onclick="refresh()">
             </form>
         </details>
@@ -66,10 +72,10 @@
     <script src="./parse.js"></script>
 
     <script>
-        var loadSongs = function (linesPerPage = 41) {
+        var loadSongs = function (linesPerPage = 41, charsPerLine = 50) {
             document.getElementById('source-content').innerHTML = '';
             songList = Object.keys(globalThis.songs);
-            songList.forEach(song => parseSong('source-content', globalThis.songs[song], linesPerPage));
+            songList.forEach(song => parseSong('source-content', globalThis.songs[song], linesPerPage, charsPerLine));
             subpageCount = document.getElementById('source-content').childNodes.length;
             console.log(`Loaded ${songList.length} songs, onto ${subpageCount} subpages`);
         }
@@ -83,13 +89,34 @@
             const ordFront = document.getElementById('ordFront').value.split(',').map(Number).splice(0, perPage);
             const ordBack = document.getElementById('ordBack').value.split(',').map(Number).splice(0, perPage);
             const fontSize = document.getElementById('fontSize').value + 'px';
-            const linesPerPage = document.getElementById('lines').value;
-            loadSongs(linesPerPage);
+            const pagePadding = parseFloat(document.getElementById('pagePadding').value);
+            const linesPerPage = parseInt(document.getElementById('lines').value);
+            const charsPerLine = parseInt(document.getElementById('charsPerLine').value);
+            loadSongs(linesPerPage, charsPerLine);
             document.body.style.fontSize = fontSize;
             reformatToPages('.content-page', perPage, ordFront, ordBack);
-            setSectionGrid('.sheet', columns, rows, width, height);
+            setSectionGrid('.sheet', columns, rows, width, height, pagePadding);
+            saveFormState();
         }
 
+        function saveFormState() {
+            const formElements = document.querySelectorAll('form input');
+            formElements.forEach(element => {
+                localStorage.setItem(element.id, element.value);
+            });
+        }
+
+        function loadFormState() {
+            const formElements = document.querySelectorAll('form input');
+            formElements.forEach(element => {
+                const savedValue = localStorage.getItem(element.id);
+                if (savedValue !== null) {
+                    element.value = savedValue;
+                }
+            });
+        }
+
+        loadFormState();
         refresh();
     </script>
 </body>
